# Hydra

./: CMakeLists.txt  README.md
cmake/: AddHydraExample.cmake  FindROOT.cmake
examples/phase_space/: .gitignore  CMakeLists.txt
examples/phase_space/include/: hydra  thrust
examples/phase_space/src/: PhSp.cpp  PhSp.cu
examples/phase_space/timing_tests/: timer.py
hydra/: Events.h  Function.h  LogLikelihoodFCN.h  PhaseSpace.h
hydra/detail/: Config.h
hydra/detail/functors/: ProcessCallsVegas.h
hydra/experimental/: Events.h  PhaseSpace.h
hydra/experimental/detail/: Events.inl
src/: HydraFitExample.cpp
